--- a/simple-project/src/main/resources/static/asserts/css/signup.css
+++ b/simple-project/src/main/resources/static/asserts/css/signup.css
@@ -18,16 +18,16 @@ body {
   /*background-color: #f5f5f5;*/
 }
 
-.form-signin {
+.form-signup {
   width: 100%;
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
 }
-.form-signin .checkbox {
+.form-signup .checkbox {
   font-weight: 400;
 }
-.form-signin .form-control {
+.form-signup .form-control {
   position: relative;
   box-sizing: border-box;
   height: auto;
@@ -35,25 +35,28 @@ body {
   font-size: 16px;
   
 }
-.form-signin .form-control:focus {
+.form-signup .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="email"] {
+.form-signup input[type="email"] {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
+  margin-top: 7px;
+  margin-bottom: 7px;
 }
-.form-signin input[type="password"] {
+.form-signup input[type="text"] {
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  margin-top: 7px;
+  margin-bottom: 7px;
+}
+.form-signup input[type="password"] {
   background-color: grew;
   caret-color: white;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 7px;
+  margin-bottom: 7px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-}
-.form-signin .form-signup{
-	color: blue;
-	float: right;
-	margin-right: 5%;
 }
 
 .ModalBase-container {
