--- a/simple-project/src/main/resources/templates/index.html
+++ b/simple-project/src/main/resources/templates/index.html
@@ -13,20 +13,21 @@
 	</head>
 
 	<body class="text-center">
-		<form class="form-signin" action="dashboard.html" th:action="@{/login}" method="post">
+		<form class="form-signin" action="home.html" th:action="@{/login}" method="post">
 			<img class="mb-4" th:src="@{/asserts/img/logo.svg}" src="asserts/img/bootstrap-solid.svg" alt="" width="216" height="216">
 			<h1 class="h3 mb-3 font-weight-normal" th:text="#{login.tip}">Please sign in</h1>
 			<p style="color: red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
 			<label class="sr-only">Username</label>
-			<input type="text" class="form-control" name="username" placeholder="Username" th:placeholder="#{login.username}" autofocus="">
+			<input type="text" class="form-control" name="userId" placeholder="UserId" th:placeholder="#{login.userid}" autofocus="">
 			<label class="sr-only">Password</label>
 			<input type="password" class="form-control" name="password" placeholder="Password" th:placeholder="#{login.password}">
 			<div class="checkbox mb-3">
 				<label>
-          <input type="checkbox" value="remember-me"> [[#{login.remember}]]
-        </label>
+          	<input type="checkbox" value="remember-me"> [[#{login.remember}]]
+        	</label>
 			</div>
 			<button class="btn btn-lg btn-primary btn-block" type="submit" th:text="#{login.btn}">Sign in</button>
+          	<a class="form-signup" href="/signup.html" th:text="#{login.signup}"></a>
 			<p class="mt-5 mb-3 text-muted">© 2020-    </p>
 			<a class="btn btn-sm" th:href="@{/index.html(l='zh_CN')}">中文</a>
 			<a class="btn btn-sm" th:href="@{/index.html(l='en_US')}">English</a>
