--- a/simple-project/src/main/resources/templates/signup.html
+++ b/simple-project/src/main/resources/templates/signup.html
@@ -1,37 +1,81 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="the index page">
-	<meta name="author" content="ZhangZhiPing">
-	<title>Project of Class 6</title>
-	<!-- Bootstrap core CSS -->
-	<link href="asserts/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/4.5.2/css/bootstrap.css}" rel="stylesheet">
-	<!-- Custom styles for this template -->
-	<link href="asserts/css/signin.css" th:href="@{/asserts/css/signup.css}" rel="stylesheet">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="the index page">
+<meta name="author" content="ZhangZhiPing">
+<title>Project of Class 6</title>
+<!-- Bootstrap core CSS -->
+<link href="asserts/css/bootstrap.min.css"
+	th:href="@{/webjars/bootstrap/4.5.2/css/bootstrap.css}"
+	rel="stylesheet">
+<!-- Custom styles for this template -->
+<link href="asserts/css/signin.css" th:href="@{/asserts/css/signup.css}"
+	rel="stylesheet">
 </head>
 
 <body class="text-center">
 	<form class="form-signup" th:action="@{/signup}" method="post">
-		<img class="mb-4" th:src="@{/asserts/img/logo.svg}" src="asserts/img/bootstrap-solid.svg" alt="" width="216" height="216">
+		
+		<img class="mb-4" th:src="@{/asserts/img/logo.svg}"
+			src="asserts/img/bootstrap-solid.svg" alt="" width="216" height="216">
 		<h1 class="h3 mb-3 font-weight-normal">sign up</h1>
+
 		<!--  <p style="color: red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p> -->
-		<label class="sr-only">UserId</label>
-		<input type="text" class="form-control" name="signUpId" placeholder="Id" autofocus="">
-		<label class="sr-only">UserName</label>
-		<input type="text" class="form-control" name="signUpName" placeholder="Name" >
-		<label class="sr-only">Password</label>
-		<input type="password" class="form-control" name="signUpPassword" placeholder="Password" >
-		<label class="sr-only">Email</label>
-		<input type="email" class="form-control" name="signUpEmail" placeholder="Email" >
-		<div class="checkbox mb-3">
-			<label>
-        </label>
+		<div class="form-group row" style="align-items: center;">
+			<label class="col-sm-2">UserId</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" name="signUpId"
+					placeholder="Id" autofocus="">
+			</div>
 		</div>
-		<button class="btn btn-lg btn-primary btn-block" type="submit" th:text="#{login.btn}">Sign up</button>
-        
-		<p class="mt-5 mb-3 text-muted">© 2020-    </p>
+		<div class="form-group row" style="align-items: center;">
+			<label class="col-sm-2">UserName</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" name="signUpName"
+					placeholder="Name">
+			</div>
+		</div>
+		<div class="form-group row" style="align-items: center;">
+			<label class="col-sm-2">Password</label>
+			<div class="col-sm-10">
+				<input type="password" class="form-control" name="signUpPassword"
+					placeholder="Password">
+			</div>
+		</div>
+		<div class="form-group row" style="align-items: center;">
+			<label class="col-sm-2">Confirm Password</label>
+			<div class="col-sm-10">
+				<input type="password" class="form-control" name="confirmPassword"
+					placeholder="Password">
+			</div>
+		</div>
+		<div class="form-group row" style="align-items: center;">
+			<label class="col-sm-2">Email</label>
+			<div class="col-sm-6">
+				<input type="email" class="form-control" name="signUpEmail"
+					placeholder="Email">
+			</div>
+			<div class="col-sm-4">
+				<button class="btn btn-xs btn-primary btn-block" type="submit">get captcha</button>
+			</div>
+		</div>
+		<div class="form-group row" style="align-items: center;">
+			<label class="col-sm-2">Captcha</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" name="captcha"
+					placeholder="Email">
+			</div>
+		</div>
+		<div class="checkbox mb-3">
+			<label> </label>
+		</div>
+		<button class="btn btn-lg btn-primary btn-block" type="submit"
+			th:text="#{login.btn}">Sign up</button>
+
+		<p class="mt-5 mb-3 text-muted">© 2020-</p>
 		<a class="btn btn-sm" th:href="@{/index.html(l='zh_CN')}">中文</a>
 		<a class="btn btn-sm" th:href="@{/index.html(l='en_US')}">English</a>
 	</form>
