--- a/simple-project/src/main/resources/static/asserts/css/signup.css
+++ b/simple-project/src/main/resources/static/asserts/css/signup.css
@@ -39,23 +39,24 @@ body {
 .form-signup .form-control:focus {
   z-index: 2;
 }
+.form-signup .error{
+	color: red;
+	margin-top: -10px;
+}
 .form-signup input[type="email"] {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
-  margin-top: 7px;
-  margin-bottom: 7px;
+  margin-top: 5px;
 }
 .form-signup input[type="text"] {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
-  margin-top: 7px;
-  margin-bottom: 7px;
+  margin-top: 5px;
 }
 .form-signup input[type="password"] {
   background-color: grew;
   caret-color: white;
-  margin-top: 7px;
-  margin-bottom: 7px;
+  margin-top: 5px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
