--- a/simple-project/src/main/resources/templates/index.html
+++ b/simple-project/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
         	</label>
 			</div>
 			<button class="btn btn-lg btn-primary btn-block" type="submit" th:text="#{login.btn}">Sign in</button>
-          	<a class="form-signup" href="/signup.html" th:text="#{login.signup}"></a>
+          	<a class="form-signup" href="/signupNow" th:text="#{login.signup}"></a>
 			<p class="mt-5 mb-3 text-muted">© 2020-    </p>
 			<a class="btn btn-sm" th:href="@{/index.html(l='zh_CN')}">中文</a>
 			<a class="btn btn-sm" th:href="@{/index.html(l='en_US')}">English</a>
